# project2_Pozdnyakov_Egor_M25-555

./: .gitignore  Makefile  README.md  db_meta.json  demo.cast  final_demo.cast  pyproject.toml
data/: products.json  users.json
src/primitive_db/: core.py  decorators.py  engine.py  main.py  parser.py  utils.py
